avro_derive/tests/ui/avro_rs_373_remote.rs
use apache_avro::AvroSchema;

#[derive(AvroSchema)]
struct Foo {
    a: String,
    b: i32,
}

#[derive(AvroSchema)]
#[serde(remote = "Foo")]
struct FooRemote {
    a: String,
    b: i32,
}

pub fn main() {}
